--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -131,10 +131,10 @@ Word recognition ability, as measured by LWL, is hypothesized to play a key role
 \caption{Characteristics of included datasets from Peekbank. `Admins` denotes separate experimental sessions. `CDIs` refers to whether the dataset contains parent report vocabulary data from the MacArthur-Bates Communicative Development Inventory. \label{tab:datasets}} 
 \end{table*}
 
-Word recognition speed has been used as an index of individual differences in early childhood [@fernald2006;@marchman2008;@peter2019;@fernald2012;@newbury2016interrelationships] and beyond [@colby2023efficiency;@jeppsen2022development;@mcmurray2022slow]. Over and above measures of vocabulary size, word recognition speed at 18 months predicts children's standardized test scores years later [@marchman2008], though these predictions may be limited to particular ages or processing assessments [@peter2019]. Further, faster processing at 18 months is predictive of whether "late talkers" catch up to their peers or require further intervention [@fernald2012].  Critically, all of these assessments use words that children are reported to understand and produce -- they are not indices of vocabulary size but rather of how quickly and accurately they can recognize a spoken word and use it to guide their visual attention to a referent. 
+Word recognition speed has been used as an index of individual differences in early childhood [@fernald2006;@marchman2008;@peter2019;@fernald2012;@newbury2016interrelationships] and beyond [@colby2023efficiency;@jeppsen2022development;@mcmurray2022slow]. Over and above measures of vocabulary size, word recognition speed at 18 months predicts children's standardized test scores years later [@marchman2008], though these predictions may be limited to particular ages or processing assessments [@peter2019]. Further, faster processing at 18 months is predictive of whether "late talkers" catch up to their peers or require further intervention [@fernald2012].  Typically, these assessments use words that children are reported to understand and produce -- they are not indices of vocabulary size but rather of how quickly and accurately they can recognize a spoken word and use it to guide their visual attention to a referent. 
 Yet individual experiments measuring processing with young children typically recruit relatively small samples in a restricted range of ages. These samples provide neither the breadth of ages nor the number of participants needed to estimate the broader dynamics of how word recognition changes developmentally and how it connects with other aspects of early language development (see [@colby2023efficiency; @mcmurray2022slow] for examples of these analyses in school-aged children). To overcome this limitation, we turned to Peekbank, an open database of LWL data from young children, stored in a harmonized format [@zettersten2023peekbank]. This resource allows us to gain an unprecedented view of the development of word recognition across a large sample of children. 
 
-Here we investigate two specific hypotheses. First, one influential theory posits that language learning is a process of skill learning, in which the primary challenge of the child is learning to converse with others in real time [@christiansen2016;@chater2018]. Based on this theory, we should expect to see the signatures of expertise and skill learning in word recognition. Accuracy should change linearly with the logarithm of age, reflecting gradual asymptotic convergence to mature levels of accuracy. In addition, the logarithm of processing speed should decrease with the logarithm of age, potentially reflecting the "power law of practice" [@snoddy1926;@kail1991;@anderson1982; cf @heathcote2000]. Finally, trial-to-trial variability in both speed and accuracy should decrease with increasing expertise [@todorov2002optimal]. 
+Here we investigate two specific hypotheses. First, one influential theory posits that language learning is a process of skill learning, in which the child is learning the skill of fluent conversation with other language users [@christiansen2016;@chater2018]. In this theory, the major information processing challenge of language learning is that incoming language is ephemeral and must be processed quickly before it is lost (the "now-or-never bottleneck"). On this kind of account, we should expect to see the signatures of expertise and skill learning in word recognition, which is one of the primary skills involved in processing incoming language in real time. Accuracy should change linearly with the logarithm of age, reflecting gradual asymptotic convergence to mature levels of accuracy. In addition, we might observe what is known as the "power law of practice," the ubiquitous regularity that, for many skills, the logarithm of reaction time decreases with the logarithm of experience [@snoddy1926;@kail1991;@anderson1982; cf. @heathcote2000]. In our case, we expect that chronological age is a proxy for experience and so the logarithm of processing speed should decrease linearly with the logarithm of age. Finally, trial-to-trial variability in both speed and accuracy should decrease with increasing expertise [@todorov2002optimal]. 
 
 Second, previous findings have provided limited and sometimes conflicting evidence on the concurrent and predictive relations between word recognition and language learning. Initial reports showed strong predictive relationships between both speed and accuracy and later vocabulary growth [@fernald2006], with replications in infants born preterm [@marchman2016] and late talkers [@fernald2012]. Subsequent studies have primarily focused on speed of processing and found more mixed results, with reaction time measures found to be only inconsistently predictive of later vocabulary outcomes [@peter2019;@newbury2016interrelationships;@lany2018]. A larger dataset should allow us to make a more definitive test of the presence of these relationships. Further, by examining the relationship between speed, accuracy, and vocabulary, it should be possible to assess the extent to which processing speed specifically plays a role in vocabulary growth.
 
@@ -251,14 +251,13 @@ rt_mods_lmer_summary <- map_df(rt_mods_lmer, ~broom.mixed::glance(.x)) |>
          r2 = map_dbl(rt_mods_lmer, ~performance::r2_nakagawa(.x)$R2_conditional))
 ```
 
-We began by characterizing developmental changes in speed and accuracy. We computed both RTs (reaction times) and accuracies following standard practices in the literature [@fernald2008]. Because there is no consensus about the length of time windows for the computation of accuracy, we considered both a shorter window (from 200 -- 2200 ms after noun onset) and a longer window (from 200 -- 4000 ms). For each window, we averaged all fixation within the window to compute a continuous proportion between 0 (no fixation on the target during the window) and 1 (total fixation on the target during the window) on every trial. 
+We began by characterizing developmental changes in speed and accuracy. We computed both RTs (reaction times) and accuracies (proportion target looking) following standard practices in the literature [@fernald2008]. Because there is no consensus about the length of time windows for the computation of accuracy, we considered both a shorter window (from 200 -- 2000 ms after noun onset) and a longer window (from 200 -- 4000 ms). For each window, we averaged all fixation within the window to compute a continuous proportion target looking between 0 (no fixation on the target during the window) and 1 (total fixation on the target during the window) on every trial. 
 
-Our first question was about the functional form of the relationships between age, speed, and accuracy (see SI for raw correlations between variables). To investigate this question, we fit linear mixed effects models predicting accuracy and RT on each trial across the full dataset with random slopes of child age by study and random intercepts by participant. We compared models that included both long and short accuracy windows, as well as logarithmic and linear effects of age, and logarithmic and linear transformations of RT. The best fitting model of accuracy predicted long window accuracy as a function of the logarithm of age,^[This longer window yielded overall higher cross-trial reliability as well, and so we report long window results in the main text. All findings reported here hold for both window sizes, however (see SI).] and the best fitting model of speed predicted log RT as a function of log age as well (see SI). 
+Our first question was about the functional form of the relationships between age, speed, and accuracy (see SI for raw correlations between variables). (In this initial investigation, we treat the observed variables RT and target looking as direct measures of the constructs speed and accuracy, but we later estimate them as latent variables.) We began by fitting linear mixed effects models predicting speed and accuracy on each trial across the full dataset with random slopes of child age by study and random intercepts by participant. We compared models that included both long and short accuracy windows, as well as logarithmic and linear effects of age, and logarithmic and linear transformations of RT. The best fitting model of accuracy predicted long window accuracy as a function of the logarithm of age,^[This longer window yielded overall higher cross-trial reliability as well, and so we report long window results in the main text. All findings reported here hold for both window sizes, however (see SI).] and the best fitting model of speed predicted log RT as a function of log age as well (see SI). 
 
-Figure \ref{fig:devchange} shows these age gradients. Log RT decreased significantly with age (`r papaja::apa_print(rt_mods_lmer[[2]])$full_result$log_age_s`) and accuracy increased significantly with age  (`r papaja::apa_print(acc_mods_lmer[[2]])$full_result$log_age_s`). In sum, we see continuing improvements in word recognition across the full age range in our dataset that appear roughly linear in the logarithm of age.  These logarithmic relationships follow theoretical expectations that both speed and accuracy should gradually asymptote to mature levels of performance as in skill learning more generally [@anderson1982,@snoddy1926]. 
-<!-- With our current dataset we cannot specifically determine whether within-individual patterns of change conform to power law or exponential forms [@kail1991,@heathcote2000], but regardless we see clear patterns of developmental change related to skill acquisition. -->
+Figure \ref{fig:devchange} shows these age gradients. Log RT decreased significantly with age, reflecting increasing speed (`r papaja::apa_print(rt_mods_lmer[[2]])$full_result$log_age_s`) and accuracy also increased significantly with age  (`r papaja::apa_print(acc_mods_lmer[[2]])$full_result$log_age_s`). In sum, we see continuing improvements in word recognition across the full age range in our dataset that appear roughly linear in the logarithm of age.  These logarithmic relationships follow theoretical expectations that both speed and accuracy should gradually asymptote to mature levels of performance as in skill learning more generally [@anderson1982,@snoddy1926]. 
 
-```{r devchange, fig.cap="Participant-level accuracy and reaction time (log), plotted by age (log). The solid blue line shows a linear fit and associated confidence interval. Individual dotted lines show linear fits for those datasets spanning six or more months of age. The dashed line for accuracy shows chance-level looking (.5)", fig.env="figure*", fig.height = 2.5}
+```{r devchange, fig.cap="Participant-level target looking and reaction time (log), plotted by age (log). Longitudinal datapoints are connected by lines. The solid blue line shows a linear fit and associated confidence interval. Individual dotted lines show linear fits for those datasets spanning six or more months of age. The dashed line for accuracy shows chance-level looking (.5)", fig.env="figure*", fig.height = 2.5}
 
 datasets_with_age_variation <- d_trial |>
   group_by(dataset_name) |>
@@ -270,30 +269,32 @@ d_sub_agevar <- d_sub |>
 
 #library(RColorBrewer)
 
-  mycolors = c("#1B9E77", "#D95F02", "#E7298A", "#66A61E", "#1B9E77", "#D95F02", "#E7298A", "#66A61E", "#1B9E77", "#D95F02", "#E7298A", "#66A61E","#1B9E77", "#D95F02")
-  # 4 colors from brewer scale "Dark2" that I thought had decent contrast against the grey/black background dots
-  
+mycolors = c("#1B9E77", "#D95F02", "#E7298A", "#66A61E", "#1B9E77", "#D95F02", "#E7298A", "#66A61E", "#1B9E77", "#D95F02", "#E7298A", "#66A61E","#1B9E77", "#D95F02")
+# 4 colors from brewer scale "Dark2" that I thought had decent contrast against the grey/black background dots
+
 
 a <- ggplot(d_sub,
-       aes(x = age, y = long_window_accuracy)) + 
+            aes(x = age, y = long_window_accuracy)) + 
   geom_point(alpha = .02) + 
+  geom_line(aes(group = subject_id), alpha = .05) + 
   geom_smooth(data = d_sub_agevar,
               aes(group = dataset_name, col = dataset_name), se=FALSE,
               alpha = 1, method = "lm", size = .5, lty = 3) + 
-    geom_smooth(method = "lm") +
+  geom_smooth(method = "lm") +
   geom_hline(yintercept = .5, lty = 3) + 
   scale_x_log10(breaks = c(12,24,36,48,60)) +
   scale_color_manual(values=mycolors, guide = FALSE) + 
-  ylab("Accuracy") + 
+  ylab("Proportion Target Looking") + 
   xlab("Age (months)")
 
 b <- ggplot(d_sub,
-       aes(x = age, y = rt)) + 
+            aes(x = age, y = rt)) + 
   geom_point(alpha = .02) + 
+  geom_line(aes(group = subject_id), alpha = .05) + 
   geom_smooth(data = d_sub_agevar,
               aes(group = dataset_name, col = dataset_name), se=FALSE,
               alpha = .1, method = "lm", size = .5, lty = 3) + 
-    geom_smooth(method = "lm") +
+  geom_smooth(method = "lm") +
   scale_x_log10(breaks = c(12,24,36,48,60)) +
   scale_y_log10() +
   scale_color_manual(values=mycolors, guide = FALSE) + 
@@ -319,26 +320,28 @@ rt_var_mod <- lmer(log_rt_var ~ log_age_s + (log_age_s | dataset_name) +
                data = d_sub)
 ```
 
-One further hallmark of increasing skill is a decrease in task-relevant variability [@todorov2002optimal]. Both within and across datasets, within-individual variation in accuracy and RT decreased across the developmental range we examined (Figure \ref{fig:variance}). We fit mixed effects models to the standard deviation of both accuracy and RT for each testing session for each participant, including random slopes of log age by dataset and random intercepts for each participant. For both speed and accuracy, within-individual variability decreased with age (RT: `r papaja::apa_print(rt_var_mod)$full_result$log_age_s`; accuracy: `r papaja::apa_print(acc_var_mod)$full_result$log_age_s`). Thus, as well as being faster and more accurate, older children were more consistent in their online word recognition than younger children.
+One further hallmark of increasing skill is a decrease in task-relevant variability [@todorov2002optimal]. Both within and across datasets, within-individual variation in speed and accuracy decreased across the developmental range we examined (Figure \ref{fig:variance}). We fit mixed effects models to the standard deviation of both speed and accuracy for each testing session for each participant, including random slopes of log age by dataset and random intercepts for each participant. For both speed and accuracy, within-individual variability decreased with age (speed: `r papaja::apa_print(rt_var_mod)$full_result$log_age_s`; accuracy: `r papaja::apa_print(acc_var_mod)$full_result$log_age_s`). Thus, as well as being faster and more accurate, older children were more consistent in their online word recognition than younger children.
 
-```{r variance, fig.cap="Participant-level variability in accuracy and reaction time (log RT), plotted by age (log). Plotting conventions are as in Figure 1.", fig.env="figure*", fig.height = 2.5}
+```{r variance, fig.cap="Participant-level variability in target looking and reaction time (log RT), plotted by age (log). Plotting conventions are as in Figure 1.", fig.env="figure*", fig.height = 2.5}
   mycolors = c("#1B9E77", "#D95F02", "#E7298A", "#66A61E", "#1B9E77", "#D95F02", "#E7298A", "#66A61E", "#1B9E77", "#D95F02", "#E7298A", "#66A61E","#1B9E77", "#D95F02")
 
 c <- ggplot(d_sub,
        aes(x = age, y = long_window_acc_var)) + 
   geom_point(alpha = .02) + 
+  geom_line(aes(group = subject_id), alpha = .05) + 
   geom_smooth(data = d_sub_agevar,
               aes(group = dataset_name, col = dataset_name), se=FALSE,
               alpha = .1, method = "lm", size = .5, lty = 3) + 
     geom_smooth(method = "lm") +
   scale_x_log10(breaks = c(12,24,36,48,60)) +
   scale_color_manual(values=mycolors, guide = FALSE) + 
-  ylab("SD of Accuracy") + 
+  ylab("SD of Prop Target Looking") + 
   xlab("Age (months)")
 
 d <- ggplot(d_sub,
        aes(x = age, y = log_rt_var)) + 
   geom_point(alpha = .02) + 
+  geom_line(aes(group = subject_id), alpha = .05) + 
   geom_smooth(data = d_sub_agevar,
               aes(group = dataset_name, col = dataset_name), se=FALSE,
               alpha = .1, method = "lm", size = .5, lty = 3) + 
@@ -355,7 +358,7 @@ cowplot::plot_grid(c,d)
 
 ## Speed and accuracy relate to vocabulary size {.unnumbered}
 
-We were next interested in whether the various aspects of word recognition -- including accuracy, RT, and the variability of each of these -- were related to other aspects of early language ability. Of the studies in our database, `r sum(str_length(dataset_characteristics$CDIs)>0)` gathered parent reports about children's early vocabulary using the MacArthur-Bates Communicative Development Inventory (CDI), a popular survey instrument that provides a reliable and valid estimate of children's early vocabulary [@marchman2023;@frank2021]. Different forms of the CDI can be used to measure either receptive and expressive vocabulary (for children up to 18 months) or expressive vocabulary only (for children 16 -- 30 months). 
+We were next interested in whether the various aspects of word recognition -- including speed, accuracy, and the variability of each of these -- were related to other aspects of early language ability. Of the studies in our database, `r sum(str_length(dataset_characteristics$CDIs)>0)` gathered parent reports about children's early vocabulary using the MacArthur-Bates Communicative Development Inventory (CDI), a popular survey instrument that provides a reliable and valid estimate of children's early vocabulary [@marchman2023;@frank2021]. Different forms of the CDI can be used to measure either receptive and expressive vocabulary (for children up to 18 months) or expressive vocabulary only (for children 16 -- 30 months). 
 
 ```{r efa}
 d_sub_mat <- d_sub |>
@@ -383,7 +386,7 @@ fit3 <- cfa(fa3_model, d_sub_mat_s, std.lv=TRUE, missing='fiml')
 fit_stats <- suppressMessages(summary(fit3, fit.measures=TRUE, standardize=TRUE))
 ```
 
-We fit a series of factor analytic models to explore the dimensionality of the parent report and child LWL data. Initial exploratory factor analysis using parallel analysis to select the number of factors suggested that three factors explained substantial variance in the data (see SI: Factor Analysis). To better accommodate missing data under the assumption of data missing at random (e.g., due to dataset), we used confirmatory factor analysis with full information maximum likelihood to find the best set of loadings. The best fitting model of those we examined was a three-factor model with factors for speed (RT and RT variability), accuracy (accuracy and accuracy variability), and vocabulary (comprehension and production from the CDI). Fit statistics for this model were generally good (Confirmatory fit index: `r round(fit_stats$fit["cfi"], 3)`, RMSE: `r round(fit_stats$fit["rmsea"], 3)`); see SI: Alternative Factor Structures). 
+We fit a series of factor analytic models to explore the dimensionality of the parent report and child LWL data. Initial exploratory factor analysis using parallel analysis to select the number of factors suggested that three factors explained substantial variance in the data (see SI: Factor Analysis). To better accommodate missing data under the assumption of data missing at random (e.g., due to dataset), we used confirmatory factor analysis with full information maximum likelihood to find the best set of loadings. The best fitting model of those we examined was a three-factor model with factors for speed (RT and RT variability), accuracy (proportion looking to target on each trial and associated variability of this measure), and vocabulary (comprehension and production from the CDI). Fit statistics for this model were generally good (Confirmatory fit index: `r round(fit_stats$fit["cfi"], 3)`, RMSE: `r round(fit_stats$fit["rmsea"], 3)`); see SI: Alternative Factor Structures). 
 
 
 ```{r age_regression, fig.env="figure*", fig.cap="Structural equation model showing the three-factor factor analysis with a regression of each latent variable on the logarithm of age. Observed variables are notated as squares and latent variables are notated as circles Factor loadings and regression coefficients are shown with straight, solid lines; covariances are shown with dashed lines; residual variances are shown as solid circular connections. Stars show conventional levels of statistical significance, e.g. * indicates p < .05, ** indicates p < .01, and *** indicates p < .001. Covariances reflect age-residualized correlations between variables. Abbreviations: acc = accuracy, prod = production vocabulary, comp = comprehension vocabulary.", fig.height = 3}
@@ -418,7 +421,7 @@ layout_age = matrix(nrow=5, ncol = 6,
                 byrow = TRUE)
 
 
-node_text <- tibble(name=c("acc", "acc_sd", "accuracy", "comp", "log_age", "log_rt", "log_rt_sd", "prod", "speed", "vocab"), pretty=c("Accuracy", "Accuracy (SD)", "Accuracy", "Comprehension", "Age (log months)", "log RT", "log RT (SD)", "Production", "Speed", "Vocabulary"))
+node_text <- tibble(name=c("acc", "acc_sd", "accuracy", "comp", "log_age", "log_rt", "log_rt_sd", "prod", "speed", "vocab"), pretty=c("Target Looking", "Target Looking (SD)", "Accuracy", "Comprehension", "Age (log months)", "log RT", "log RT (SD)", "Production", "Speed", "Vocabulary"))
 
 nodes <- get_nodes(fit3_age) |> tibble() |> left_join(node_text) |> mutate(label=ifelse(shape=="oval",pretty, str_c(pretty, "\n", est_sig)))
 
@@ -454,7 +457,7 @@ prepare_graph(edges=edges, nodes=nodes, text_size = 2.5, layout = t(layout_age),
           fix_coord=FALSE) |> plot_happy_arrows()
 ```
 
-Figure \ref{fig:age_regression} shows a regression model fit to this confirmatory factor analysis, with log age predicting each latent variable. This regression model allows interpretation of the covariances between latent factors as partial correlations (controlling for age). The non-age related variance of all three latent factors was significantly related to that of the other factors, with RT and accuracy showing strong negative covariance ($\beta=$ `r round(fit3_age_summary$pe[21,"est"],3)`, SE = `r round(fit3_age_summary$pe[21,"se"],3)`, $p < .0001$) and weaker but significant covariation between RT and vocabulary ($\beta=$ `r round(fit3_age_summary$pe[20,"est"],3)`, SE = `r round(fit3_age_summary$pe[20,"se"],3)`, $p < .0001$) and accuracy and vocabulary ($\beta=$ `r round(fit3_age_summary$pe[19,"est"],3)`, SE = `r round(fit3_age_summary$pe[19,"se"],3)`, $p < .0001$). This model supports the idea that variation in speed and accuracy of word recognition is related to differences in parent-reported vocabulary beyond the effects of age. These analyses all treat between-person differences, however, rather than modeling change in these factors within individuals. 
+Figure \ref{fig:age_regression} shows a regression model fit to this confirmatory factor analysis, with log age predicting each latent variable. This regression model allows interpretation of the covariances between latent factors as partial correlations (controlling for age). The non-age related variance of all three latent factors was significantly related to that of the other factors, with speed and accuracy showing strong negative covariance ($\beta=$ `r round(fit3_age_summary$pe[21,"est"],3)`, SE = `r round(fit3_age_summary$pe[21,"se"],3)`, $p < .0001$) and weaker but significant covariation between RT and vocabulary ($\beta=$ `r round(fit3_age_summary$pe[20,"est"],3)`, SE = `r round(fit3_age_summary$pe[20,"se"],3)`, $p < .0001$) and accuracy and vocabulary ($\beta=$ `r round(fit3_age_summary$pe[19,"est"],3)`, SE = `r round(fit3_age_summary$pe[19,"se"],3)`, $p < .0001$). This model supports the idea that variation in speed and accuracy of word recognition is related to differences in parent-reported vocabulary beyond the effects of age. These analyses all treat between-person differences, however, rather than modeling change in these factors within individuals. 
 
 
 ## Speed of processing relates to vocabulary growth {.unnumbered}
@@ -485,10 +488,10 @@ growth_mod <- lmer(prod ~ poly(age_15,2) *rt_t0 + (age  | subject_id) + (1 | dat
 ```
 
 
-We began investigating relationships between LWL and vocabulary by using longitudinal growth models. We first reproduced the analysis reported in @fernald2012, in which between-person differences in longitudinal growth in productive vocabulary were predicted based on between-person differences in RT during the initial session of the study. We fit a mixed effects model predicting growth in vocabulary as a quadratic function of age, RT at study initiation ($t_0$), and their interaction (as well as random effects of age by participant and by dataset). This model revealed a significant effect of $t_0$ RT (`r papaja::apa_print(growth_mod)$full_result$rt_t0`) and an interaction between $t_0$ RT and the quadratic age predictor (`r papaja::apa_print(growth_mod)$full_result$polyage_15_22_rt_t0`). This analysis suggests that children with faster initial RTs show both larger vocabularies and faster vocabulary growth over time, confirming that findings from @fernald2012 were robust across the full dataset. We confirmed this analysis using a non-linear growth model with a logistic shape, which shows a better fit to vocabulary size than the quadratic model (see SI: Non-Linear Growth Model). Figure \ref{fig:growth} shows predictions from this model, confirming the differentiation of growth curves for children with higher and lower initial reaction time. 
+We began investigating relationships between LWL and vocabulary by using longitudinal growth models. We first reproduced the analysis reported in @fernald2012, in which between-person differences in longitudinal growth in productive vocabulary were predicted based on between-person differences in speed during the initial session of the study. We fit a mixed effects model predicting growth in vocabulary as a quadratic function of age, RT at study initiation ($t_0$), and their interaction (as well as random effects of age by participant and by dataset). This model revealed a significant effect of $t_0$ RT (`r papaja::apa_print(growth_mod)$full_result$rt_t0`) and an interaction between $t_0$ RT and the quadratic age predictor (`r papaja::apa_print(growth_mod)$full_result$polyage_15_22_rt_t0`). This analysis suggests that children with faster initial RTs show both larger vocabularies and faster vocabulary growth over time, confirming that findings from @fernald2012 were robust across the full dataset. We confirmed this analysis using a non-linear growth model with a logistic shape, which shows a better fit to vocabulary size than the quadratic model (see SI: Non-Linear Growth Model). Figure \ref{fig:growth} shows predictions from this model, confirming the differentiation of growth curves for children with higher and lower initial reaction time. 
 
 
-```{r growth, fig.cap="Growth curves from a logistic growth model showing predicted vocabulary growth for the 25th and 75th percentile on initial reaction times. Solid lines show global model estimates and dashed lines show estimates for individual datasets with sufficient age variation as above.", fig.env="figure", fig.height = 2.5, fig.width=4, out.width=".5\\textwidth", include=TRUE}
+```{r growth, fig.cap="Growth curves from a logistic growth model showing predicted vocabulary growth for the 25th and 75th percentile on initial reaction times. Individual longitudinal trajectories are shown in light gray. Solid lines show global model estimates and dashed lines show estimates for individual datasets with sufficient age variation as above.", fig.env="figure", fig.height = 2.5, fig.width=4, out.width=".5\\textwidth", include=TRUE}
 
 d_sub_prod <- filter(d_sub, !is.na(prod)) |>
   group_by(subject_id) |>
@@ -534,7 +537,8 @@ dataset_preds$pred <- predict(mod_nlme,
                               level = c(0,1))$predict.dataset_name
 
 ggplot(d_sub_prod, aes(x = age, y = prod, col = as.factor(log_rt_0))) + 
-  geom_point(alpha = .02, color="black") + 
+  geom_point(alpha = .03, pch = ".", col = "black") + 
+  geom_line(aes(group = subject_id), alpha = .02, col = "black") + 
   geom_line(data = dataset_preds |>   
               filter(dataset_name %in% datasets_with_age_variation$dataset_name), 
             aes(y = pred, group = interaction(log_rt_0, dataset_name)), lty="dashed", alpha=.5)+
@@ -606,7 +610,7 @@ slopes_long_summary <- suppressMessages(summary(slopes_long, fit.measures=TRUE, 
 
 On the other hand, it is possible that differences in predicted growth trajectories are due to overall coupling between vocabulary size and language processing, rather than a specifically predictive relationship between $t_0$ RT and vocabulary growth. To test this relationship, we used longitudinal structural equation models. We separated the longitudinal speed, accuracy, and vocabulary data into two-month bins spanning up to 10 months ($t_0, ..., t_4$) and fit individual growth across each of these variables. We used full-information maximum likelihood to handle the substantial missing data caused by the different longitudinal sampling schemes of studies in our dataset. (We present a model of coupled growth in the observed variables here for simplicity; see SI for a comparable model using growth in the latent factors). The fitted longitudinal model is shown in Figure \ref{fig:longitudinal}. Overall fit statistics were generally acceptable (Confirmatory fit index: `r round(slopes_long_summary$fit["cfi"], 3)`, RMSE: `r round(slopes_long_summary$fit["rmsea"], 3)`, RMSE $p$-value: `r round(slopes_long_summary$fit["rmsea.pvalue"], 3)`). 
 
-Our key question of interest concerned coupling among the (latent) intercepts and slopes of these growth models. Consistent with the idea that overall faster processing is related to vocabulary growth, we saw significant coupling between processing speed intercepts and vocabulary growth slopes ($\beta=$ `r round(slopes_long_summary$pe[63,"est"],3)`, SE = `r round(slopes_long_summary$pe[63,"se"],3)`, $p =$ `r round(slopes_long_summary$pe[63,"pvalue"],3)`) as well as a variety of other couplings. On the other hand, there was not significant coupling between *growth* in RT and *growth* in vocabulary ($\beta=$ `r round(slopes_long_summary$pe[65,"est"],3)`, SE = `r round(slopes_long_summary$pe[65,"se"],3)`, $p =$ `r round(slopes_long_summary$pe[65,"pvalue"],3)`). This null effect could be interpreted as being consistent with these abilities growing independently, but we cannot rule out other possibilities. First, the longitudinal data we had might not allow sufficiently precise estimates of growth slopes, or second, since vocabulary growth is non-linear, the linear model we used here might not have captured coupling among nonlinear aspects of developmental change. 
+Our key question of interest concerned coupling among the (latent) intercepts and slopes of these growth models. Consistent with the idea that overall faster processing is related to vocabulary growth, we saw significant coupling between processing speed intercepts and vocabulary growth slopes ($\beta=$ `r round(slopes_long_summary$pe[63,"est"],3)`, SE = `r round(slopes_long_summary$pe[63,"se"],3)`, $p =$ `r round(slopes_long_summary$pe[63,"pvalue"],3)`) as well as a variety of other couplings. On the other hand, there was not significant coupling between *growth* in speed and *growth* in vocabulary ($\beta=$ `r round(slopes_long_summary$pe[65,"est"],3)`, SE = `r round(slopes_long_summary$pe[65,"se"],3)`, $p =$ `r round(slopes_long_summary$pe[65,"pvalue"],3)`). This null effect could be interpreted as being consistent with these abilities growing independently, but we cannot rule out other possibilities. First, the longitudinal data we had might not allow sufficiently precise estimates of growth slopes, or second, since vocabulary growth is non-linear, the linear model we used here might not have captured coupling among nonlinear aspects of developmental change. 
 
 In sum, these findings provide evidence consistent with the claim that differences in processing speed are related to differences in the rate of age-related change in vocabulary [@fernald2006;@Weisleder2013]. Children with greater skill in word recognition learn words faster.
 
@@ -627,11 +631,11 @@ slope_background <- "#FDBF6F"
 # [5] "#FB9A99" "#E31A1C" "#FDBF6F" "#FF7F00"
 # [9] "#CAB2D6" "#6A3D9A" "#FFFF99" "#B15928"
 node_text <- tribble(~name, ~ pretty, ~fill, 
-                     "acc_t0", "t0 Accuracy", acc_color,
-                     "acc_t1", "t1 Accuracy", acc_color,
-                     "acc_t2", "t2 Accuracy",acc_color,
-                     "acc_t3", "t3 Accuracy",acc_color,
-                     "acc_t4", "t4 Accuracy",acc_color,
+                     "acc_t0", "t0 Target Looking", acc_color,
+                     "acc_t1", "t1 Target Looking", acc_color,
+                     "acc_t2", "t2 Target Looking",acc_color,
+                     "acc_t3", "t3 Target Looking",acc_color,
+                     "acc_t4", "t4 Target Looking",acc_color,
                      "accuracy_intercept", "Accuracy intercept",acc_color,
                      "accuracy_slope", "Accuracy slope",acc_color,
                      "log_rt_t0", "t0 log RT",rt_color,
@@ -750,9 +754,9 @@ How does word recognition change across early childhood and how does it relate t
 
 Together, our findings are consistent with theories that posit that language learning is a process of skill acquisition, in which children become adept at quickly converting ephemeral signals into meaning [@christiansen2016]. This skill develops gradually over the course of early childhood and supports word learning. Further, our results point to consistency between skill development in early childhood and the continued refinement of language processing and language knowledge during middle childhood [@mcmurray2022slow;@colby2023efficiency].
 
-By aggregating data from many pre-existing studies, we were able to overcome the limitations of prior investigations, which typically had sample sizes at least an order of magnitude smaller than ours. In contrast to individual studies, which typically have at best the statistical power to test one or two specific contrasts, our "big data" approach provided the sample sizes necessary to explore the relationships between different variables. Because early language is so variable [@frank2021], these kinds of samples -- with thousands, rather than dozens of children -- are likely to be required to gain further insight into the psychometrics of early language learning [@bergelson2023;@frank2017;@frank2021;@manybabies2020]. Future work must also explore how the functional forms we observed here between individuals reflect processes of within-person change. Although the Peekbank dataset includes a variety of longitudinal data, most reflect a small number of measurements; denser longitudinal data collection is required to better estimate  within-person growth models. 
+By aggregating data from many pre-existing studies, we were able to overcome the limitations of prior investigations, which typically had sample sizes at least an order of magnitude smaller than ours. In contrast to individual studies, which typically have at best the statistical power to test one or two specific contrasts, our "big data" approach provided the sample sizes necessary to explore the relationships between different variables. Because early language is so variable [@frank2021], these kinds of samples -- with thousands, rather than dozens of children -- are likely to be required to gain further insight into the psychometrics of early language learning [@bergelson2023;@frank2017;@frank2021;@manybabies2020]. Future work must also explore how the functional forms we observed here between individuals reflect processes of within-person change. 
 
-At the same time, our approach is both observational and exploratory. Thus, we cannot untangle the range of different causal models that explain the variation we observed. First, early word recognition skill could lead to faster word learning, due to skilled children gleaning more information from the same signal [@fernald2006]. But second, faster children could also be faster due to their larger vocabulary and stronger lexical representations. These two causal directions could also interact reciprocally, leading to a "rich get richer" process in which children with larger vocabularies process faster, and their faster processing helps them increase their vocabulary size more rapidly. Finally, a third shared factor -- perhaps general cognitive ability -- could underpin both processes. Our cross-sectional data cannot distinguish these hypotheses even in principle [@vanderweele2023dimensional], and our longitudinal data are likely too sparse to distinguish such complex causal models. Thus, these questions remain an open target for dense longitudinal data collection.
+Our approach is both observational and exploratory. Thus, we cannot untangle the range of different causal models that explain the variation we observed. First, early word recognition skill could lead to faster word learning, due to skilled children gleaning more information from the same signal [@fernald2006]. But second, faster children could also be faster due to their larger vocabulary and stronger lexical representations. These two causal directions could also interact reciprocally, leading to a "rich get richer" process in which children with larger vocabularies process faster, and their faster processing helps them increase their vocabulary size more rapidly. Finally, a third shared factor -- perhaps general cognitive ability -- could underpin both processes. Our cross-sectional data cannot distinguish these hypotheses even in principle [@vanderweele2023dimensional], and our longitudinal data are likely too sparse to distinguish such complex causal models. Thus, these questions remain an open target for dense longitudinal data collection.
 
 Our findings here are limited in their generalizability by the convenience samples that were used in the individual studies in the Peekbank database. These studies typically (but not always) represent children from well-educated parents living in university-adjacent communities. We would not expect that specific numerical parameters estimated in this aggregate convenience sample would generalize to other samples. Nevertheless, the consistency of the trends we observed across datasets suggests that our qualitative conclusions are robust to some significant sociodemographic variation.
 
